update Dockerfiles to capture beatiful Japanese fonts

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,6 @@
 FROM ruby:2.0.0
-RUN apt-get update && apt-get install -y libqt4-dev libqtwebkit-dev xvfb vim
+RUN apt-get update && apt-get install -y libqt4-dev libqtwebkit-dev xvfb vim fonts-ipafont fonts-ipafont-gothic fonts-ipafont-mincho
+ADD fonts.conf /etc/fonts/fonts.conf
 WORKDIR /usr/local/app
 ADD Gemfile Gemfile
 ADD Gemfile.lock Gemfile.lock
