--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,16 @@
 FROM ruby:2.0.0
-RUN apt-get update && apt-get install -y libqt4-dev libqtwebkit-dev xvfb vim fonts-ipafont fonts-ipafont-gothic fonts-ipafont-mincho
+RUN apt-get update && apt-get install -y libqt4-dev libqtwebkit-dev xvfb vim unzip
 ADD fonts.conf /etc/fonts/fonts.conf
 WORKDIR /usr/local/app
 ADD Gemfile Gemfile
 ADD Gemfile.lock Gemfile.lock
 RUN bundle install
+RUN cd /tmp && \
+    mkdir noto && \
+    curl -O -L https://noto-website-2.storage.googleapis.com/pkgs/NotoSansCJKjp-hinted.zip && \
+    unzip NotoSansCJKjp-hinted.zip -d ./noto && \
+    mkdir -p /usr/share/fonts/noto && \
+    cp ./noto/*.otf /usr/share/fonts/noto/ && \
+    chmod 644 /usr/share/fonts/noto/*.otf && \
+    fc-cache -fv && \
+    rm -rf NotoSansCJKjp-hinted.zip ./noto
